alignment of cross icon and listlabel fixed

--- a/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/list-type-configuration/list-type-configuration.component.css
@@ -51,3 +51,9 @@
 .card:hover {
     background-color: rgb(250, 250, 255);
 }
+
+.key-container {
+  width: 71% !important;
+  display: flex;
+  justify-content: space-between;
+}
